--- a/IAE.Web/IAE.Web.csproj
+++ b/IAE.Web/IAE.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,5 +17,9 @@
     <ProjectReference Include="..\IAE.Repositorio\IAE.Repository.csproj" />
     <ProjectReference Include="..\IAE.Services\IAE.Services.csproj" />
   </ItemGroup>
-
+	
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+	    <Exec Command="dotnet tool restore" />
+	    <Exec Command="dotnet swagger tofile --output swagger.json $(OutputPath)\$(AssemblyName).dll v1 " />
+    </Target>
 </Project>
