--- a/IAE.Web/IAE.Web.csproj
+++ b/IAE.Web/IAE.Web.csproj
@@ -7,22 +7,29 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="IAEDataBase.db" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="IAEDataBase.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.143" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Entidades\IAE.Entities.csproj" />
     <ProjectReference Include="..\IAE.Repositorio\IAE.Repository.csproj" />
     <ProjectReference Include="..\IAE.Services\IAE.Services.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="IAEDataBase.db">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 	
     <Target Name="PostBuild" AfterTargets="PostBuildEvent">
