--- a/IAE.Web/appsettings.json
+++ b/IAE.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DEV": "Data Source=.\\IAEDataBase.db;Version=3;"
+  },
   "AllowedHosts": "*"
 }
